# ME133

devel/: .catkin  local_setup.sh
devel/lib/pkgconfig/: atlas_description.pc  demo133.pc  gazebodemos.pc  hw6code.pc
devel/lib/python3/dist-packages/gazebodemos/: __init__.py
devel/lib/python3/dist-packages/hw6code/: __init__.py
devel/share/atlas_description/cmake/: atlas_descriptionConfig.cmake
devel/share/demo133/cmake/: demo133Config.cmake
devel/share/gazebodemos/cmake/: gazebodemosConfig.cmake
devel/share/hw6code/cmake/: hw6codeConfig.cmake
src/: packages
src/atlas_description/: CMakeLists.txt
src/demo133/: CMakeLists.txt
src/demo133/launch/: runurdf.launch  simatlas.launch  viewatlas.launch  viewurdf.launch
src/demo133/scripts/: hw4_p4.py  hw4_p5.py  hw4_p6.py  kinematics_skeleton.py  test.py  trajectory_generator.py  trajectory_generator2.py  trajectory_generator3.py
src/demo133/urdf/: fourDOF_h4p6.urdf  fourDOFskeleton.urdf
